--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ombd",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://SergiiMost.github.io/ombd",
+  "homepage": "https://SergiiMost.github.io/",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@mantine/core": "^5.6.1",
@@ -29,7 +29,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-    
   },
   "eslintConfig": {
     "extends": [
