--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ombd",
+  "name": "omdb",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://SergiiMost.github.io/ombd",
+  "homepage": "https://SergiiMost.github.io/omdb",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@mantine/core": "^5.6.1",
